package cafeteria.products.food.launch;

public interface ItemLaunch {
  Double getPrice();
  String getDescription();
}
